major bug squash

--- a/browser_extensions/chrome/source/src/options/index.less
+++ b/browser_extensions/chrome/source/src/options/index.less
@@ -19,6 +19,23 @@ body {
         vertical-align: top;
     }
 }
+
+#loadingMessage {
+	opacity: 0;
+	transition-duration: 1s;
+    position: absolute;
+    z-index: 10;
+    background-color: rgba(0,0,0,0.42);
+    color: white;
+    font-size: larger;
+    border: 1px solid #ccc;
+    margin:0 auto;
+    text-align: center;
+    padding: 4px 12px 5px;
+    right: 0px;
+    top: 0px;
+}
+
 #lessList {
     li {
         white-space: pre;
